--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "autotrader-ts",
   "version": "1.0.0",
-  "main": "src/index.ts",
-  "type": "module",
+  "main": "./src/index.ts",
   "author": "beulard <beulard@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "yarn run tsc",
-    "start": "yarn run ts-node src/index.ts"
+    "build": "esbuild src/index.ts --platform=node --bundle --outfile=dist/autotrader.js",
+    "dev": "yarn build --watch",
+    "start": "node dist/autotrader.js"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.0-dev.20230618"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "chalk": "^5.2.0",
-    "commander": "^11.0.0"
+    "commander": "^11.0.0",
+    "dotenv": "^16.3.1",
+    "esbuild": "^0.18.4"
   }
 }
